@@ -7,6 +7,7 @@
 2008-12-19  Don Porter	<dgp@users.sourceforge.net>
 
 	* tests/chanio.test:	Add missing [removeFile] cleanups.
+	* tests/io.test:	Add missing [close $f] to io-73.2.
 
 	* unix/Makefile.in:	Update `make dist` target to include the files
 	from the compat/zlib directory as well as all the bundled packages
